--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -37,8 +37,36 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.17.7
   cloud_firestore: ^4.17.5
+  csv: ^6.0.0
+  flutter_localizations:
+    sdk: flutter
+  firebase_storage: ^11.7.7
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  hydrated_bloc: ^9.1.5
+  equatable: ^2.0.5
+  auto_route: ^8.2.0
+  intl: ^0.20.2
+  fl_chart: ^0.68.0
+  google_fonts: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  icons_plus: ^5.0.0
+  shared_preferences: ^2.5.3
+  uuid: ^4.0.0
+  toastification: ^2.2.0
+  dropdown_search: ^5.0.6
+  path_provider: ^2.1.5
+  image_picker: ^1.0.7
+  flutter_secure_storage: ^9.2.2
+  google_sign_in: ^6.2.1
+  flutter_typeahead: ^4.3.7
 
 dev_dependencies:
+  auto_route_generator: ^8.0.0
+  build_runner: ^2.4.11
+  flutter_gen: 5.4.0
+  flutter_gen_runner: 5.4.0
+
   flutter_test:
     sdk: flutter
 
@@ -52,24 +80,15 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  generate: true
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/Grocery_Inventory_new_v1.csv
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -86,6 +105,5 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
