--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -84,7 +84,7 @@ flutter:
   generate: true
   uses-material-design: true
   assets:
-    - assets/Grocery_Inventory_new_v1.csv
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
