--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   auto_route: ^8.2.0
   intl: ^0.20.2
   fl_chart: ^0.68.0
+  google_fonts: ^6.1.0
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   icons_plus: ^5.0.0
