--- a/finalproject/firebase.json
+++ b/finalproject/firebase.json
@@ -1,1 +1,54 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"sims-dev-47238","appId":"1:527882203234:android:848bab0ca43682e8a9613b","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"sims-dev-47238","configurations":{"android":"1:527882203234:android:848bab0ca43682e8a9613b","ios":"1:527882203234:ios:babeea259bfe5ea8a9613b","web":"1:527882203234:web:4713e82360e59819a9613b"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "sims-dev-47238",
+          "appId": "1:527882203234:android:848bab0ca43682e8a9613b",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "sims-dev-47238",
+          "configurations": {
+            "android": "1:527882203234:android:848bab0ca43682e8a9613b",
+            "ios": "1:527882203234:ios:babeea259bfe5ea8a9613b",
+            "web": "1:527882203234:web:4713e82360e59819a9613b"
+          }
+        }
+      }
+    }
+  },
+  "emulators": {
+    "firestore": {
+      "port": 8080
+    },
+    "auth": {
+      "port": 9099
+    },
+    "storage": {
+      "port": 9199
+    },
+    "singleProjectMode": true,
+    "ui": {
+      "enabled": true
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ]
+}
