Update .gitignore to ignore copied web build files and remove them from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+# Ignore copied build/web files in web/
+web/assets/
+web/canvaskit/
+web/icons/
