--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -30,23 +30,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_messaging: ^14.7.10
+  firebase_messaging: ^15.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^2.30.0
-  firebase_auth: ^4.17.7
-  cloud_firestore: ^4.17.5
+  firebase_core: ^3.7.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
   csv: ^6.0.0
+  share_plus: ^11.1.0
+  # path_provider declared once below; remove duplicate
+  cross_file: ^0.3.4
   flutter_localizations:
     sdk: flutter
-  firebase_storage: ^11.7.7
+  firebase_storage: ^12.3.0
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   hydrated_bloc: ^9.1.5
   equatable: ^2.0.5
-  auto_route: ^8.2.0
+  auto_route: ^9.2.2
   intl: ^0.20.2
   fl_chart: ^0.68.0
   google_fonts: ^6.1.0
@@ -63,10 +66,10 @@ dependencies:
   flutter_typeahead: ^4.3.7
 
 dev_dependencies:
-  auto_route_generator: ^8.0.0
+  auto_route_generator: ^9.3.0
   build_runner: ^2.4.11
-  flutter_gen: 5.4.0
-  flutter_gen_runner: 5.4.0
+  flutter_gen: ^5.5.0
+  flutter_gen_runner: ^5.5.0
 
   flutter_test:
     sdk: flutter
